--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,7 +134,7 @@ nav {
 .cover {
 	position: relative;
 	height: 40rem;
-	background-image: url('/img/header.jpg');
+	background-image: url('../img/header.jpg');
 	background-size: cover;
 
 	h1 {
