--- a/scss/style.scss
+++ b/scss/style.scss
@@ -132,16 +132,15 @@ nav {
 // -----------------------------------------------------------------------------
 
 .cover {
-	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 	height: 40rem;
 	background-image: url('../img/header.jpg');
 	background-size: cover;
 
 	h1 {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50% , -50%);
 		color: $c-white;
 		font-weight: $fw-bold;
 		text-align: center;
