--- a/css/style.css
+++ b/css/style.css
@@ -406,28 +406,28 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 1rem;
+  margin: 0 0 2rem;
   color: #e20513;
   font-family: "Montserrat", sans-serif;
   font-weight: 400; }
 
 h1 {
-  font-size: 2.5rem; }
+  font-size: 3rem; }
 
 h2 {
-  font-size: 2rem; }
+  font-size: 2.5rem; }
 
 h3 {
-  font-size: 1.75rem; }
+  font-size: 2rem; }
 
 h4 {
-  font-size: 1.5rem; }
+  font-size: 1.75rem; }
 
 h5 {
-  font-size: 1.25rem; }
+  font-size: 1.5rem; }
 
 h6 {
-  font-size: 1rem; }
+  font-size: 1.25rem; }
 
 small {
   font-size: .875rem; }
@@ -450,7 +450,7 @@ i {
   font-style: italic; }
 
 p {
-  margin-bottom: 1rem;
+  margin: 0 0 1rem;
   color: #1c1c1b;
   line-height: 1.6rem; }
 
@@ -2833,6 +2833,9 @@ textarea {
   left: 20px;
   height: 3.5em; }
 
+.red-title {
+  color: #fb525d; }
+
 nav {
   width: 100%;
   height: 6.25em;
@@ -2904,14 +2907,33 @@ nav {
         transition-duration: .5s; }
 
 .cover {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
   height: 40rem;
   background-image: url("../img/header.jpg");
   background-size: cover; }
   .cover h1 {
     color: #fff;
     font-weight: 600;
+    line-height: 1.2;
     text-align: center;
     text-transform: uppercase; }
+  .cover p {
+    color: #fff;
+    font-size: .875em;
+    text-align: center; }
+  .cover .description-container {
+    width: 90%;
+    max-width: none;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%); }
+
+.filter {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1; }
