--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -18,8 +18,10 @@ $c-primary:					#e20513;
 $c-primary-darken:			darken($c-primary, 20%);
 $c-primary-lighten:			lighten($c-primary, 20%);
 
+$c-primary-alt:				#d35656;
 
-// Bran Colors
+
+// Brand Colors
 $c-facebook:         		#3b5998;
 $c-twitter:          		#55acee;
 $c-instagram:				#833ab4;
