--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,35 +11,44 @@
 								$STYLES
 -----------------------------------------------------------------------------*/
 
-.logo {
-	position: absolute;
-	top: 20px;
-	left: 20px;
-	height: 3.5em;
-}
-
 .red-title {
 	color: $c-primary-lighten;
 }
 
-// Menu
+.description-container {
+	@include wrapper();
+}
+
+.filter {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: $c-shadow;
+	z-index: 1;
+}
+
+// Nav
 // -----------------------------------------------------------------------------
 
 nav {
+	position: fixed;
 	width: 100%;
 	height: $h-nav;
 	transition-duration: .5s;
 	transition-timing-function: ease;
 	background-color: $c-white;
 	overflow: hidden;
-	z-index: 1;
+	z-index: 10;
 
-	&.open {
-		height: auto;
+	.logo {
+		position: absolute;
+		top: 20px;
+		left: 20px;
+		height: 3.5em;
 	}
 
-	ul {
-		margin: 0;
+	.menu {
 		padding: $h-nav 0 0;
 		text-align: center;
 
@@ -51,9 +60,12 @@ nav {
 			a {
 				display: inline-block;
 				padding: 1.25em;
-				color: $c-gray;
 			}
 		}
+	}
+
+	&.open {
+		height: auto;
 	}
 }
 
@@ -156,19 +168,40 @@ nav {
 	}
 
 	.description-container {
-		@include wrapper();
-
 		position: relative;
 		top: 50%;
 		transform: translateY(-50%);
 	}
 }
 
-.filter {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background-color: $c-shadow;
-	z-index: 1;
+/// Features
+// -----------------------------------------------------------------------------
+
+.features {
+	padding: 5em 0;
+	text-align: center;
+
+	.description-container {
+		text-align: center;
+
+		h4 {
+			font-size: 1em;
+		}
+	}
+
+	.icon-container {
+		display: inline-block;
+		width: 60px;
+		height: 60px;
+		margin-top: 2.5em;
+		border-radius: 50%;
+		background-color: $c-primary-lighten;
+		text-align: center;
+
+		.icon {
+			color: $c-white;
+			font-size: 1.5em;
+			line-height: 60px;
+		}
+	}
 }
