--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -15,7 +15,7 @@ $c-gray-darkest:     		lighten($c-black, 15%);
 $c-shadow:					rgba(0, 0, 0, .4);
 
 $c-primary:					#e20513;
-$c-primary-darken:			darken($c-primary, 20%);
+$c-primary-darken:			darken($c-primary, 10%);
 $c-primary-lighten:			lighten($c-primary, 20%);
 
 $c-primary-alt:				#d35656;
@@ -47,7 +47,7 @@ $lh-base:				1.4;
 
 //Header Fonts
 $ff-header:       		('Montserrat', sans-serif);
-$fw-header:				$fw-regular;
+$fw-header:				$fw-bold;
 
 // Sizes
 // -----------------------------------------------------------------------------
