--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -14,11 +14,10 @@ $c-gray-darker:		   		lighten($c-black, 25%);
 $c-gray-darkest:     		lighten($c-black, 15%);
 $c-shadow:					rgba(0, 0, 0, .4);
 
-$c-primary:					#e20513;
+$c-primary:					#d35656;
 $c-primary-darken:			darken($c-primary, 10%);
-$c-primary-lighten:			lighten($c-primary, 20%);
+$c-primary-lighten:			lighten($c-primary, 10%);
 
-$c-primary-alt:				#d35656;
 
 
 // Brand Colors
@@ -35,7 +34,7 @@ $c-youtube:          		#cd201f;
 // -----------------------------------------------------------------------------
 
 // Font Weights
-$fw-light:				100;
+$fw-light:				200;
 $fw-regular:			400;
 $fw-bold:				600;
 
