modified name classes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,10 @@
 								$STYLES
 -----------------------------------------------------------------------------*/
 
+
+// General
+// -----------------------------------------------------------------------------
+
 .description-container {
 	@include wrapper();
 }
@@ -24,11 +28,12 @@
 	z-index: 1;
 }
 
+
 // Nav
 // -----------------------------------------------------------------------------
 
-nav {
-	position: fixed;
+.nav {
+	position: relative;
 	width: 100%;
 	height: $h-nav;
 	transition-duration: .5s;
@@ -37,27 +42,102 @@ nav {
 	overflow: hidden;
 	z-index: 10;
 
-	.logo {
+	&__logo {
 		position: absolute;
 		top: 20px;
 		left: 20px;
 		height: 3.5em;
 	}
 
-	.menu {
+	&__list {
 		padding: $h-nav 0 0;
 		text-align: center;
+	}
 
-		li {
-			&:hover {
-				background: $c-white-darker;
-			}
-
-			a {
-				display: inline-block;
-				padding: 1.25em;
-			}
+	&__item {
+		&:hover {
+			background: $c-white-darker;
 		}
+	}
+
+	&__link {
+		display: inline-block;
+		padding: 1.25em;
+	}
+
+	&__handler {
+		position: absolute;
+		top: 20px;
+		right: 20px;
+		width: 60px;
+		height: 60px;
+		transition-duration: .25s;
+
+		.icon-menu {
+			position: absolute;
+			top: 30px;
+			left: 15px;
+			width: 30px;
+			height: 4px;
+			transition-duration: .25s;
+			background-color: $c-black;
+
+			&::before,
+			&::after {
+				position: absolute;
+				width: 30px;
+				height: 4px;
+				transition-duration: .25s;
+				background-color: $c-black;
+				content: '';
+	    	}
+
+			&::before {
+				top: -7px;
+				left: 0;
+	    	}
+
+			&::after {
+				top: 7px;
+				left: 0;
+		    }
+		}
+
+		&:hover {
+			cursor: pointer;
+
+			.icon-menu {
+				&::before {
+					top: -10px;
+	      		}
+
+				&::after {
+					top: 10px;
+	      		}
+	    	}
+	  	}
+
+		&.open {
+			transform: rotate(180deg);
+			transition-duration: 1s;
+
+			.icon-menu {
+				transition-duration: .5s;
+				background-color: transparent;
+
+				&::before {
+					top: 0;
+					transform: rotate(45deg);
+					transition-duration: .5s;
+		      	}
+
+				&::after {
+					top: 0;
+					transform: rotate(-45deg);
+					transition-duration: .5s;
+		     	}
+		    }
+	  	}
 	}
 
 	&.open {
@@ -65,80 +145,6 @@ nav {
 	}
 }
 
-.menu-handler {
-	position: absolute;
-	top: 20px;
-	right: 20px;
-	width: 60px;
-	height: 60px;
-	transition-duration: .25s;
-
-	.icon-menu {
-		position: absolute;
-		top: 30px;
-		left: 15px;
-		width: 30px;
-		height: 4px;
-		transition-duration: .25s;
-		background-color: $c-black;
-
-		&::before,
-		&::after {
-			position: absolute;
-			width: 30px;
-			height: 4px;
-			transition-duration: .25s;
-			background-color: $c-black;
-			content: '';
-    	}
-
-		&::before {
-			top: -7px;
-			left: 0;
-    	}
-
-		&::after {
-			top: 7px;
-			left: 0;
-	    }
-	}
-
-	&:hover {
-		cursor: pointer;
-
-		.icon-menu {
-			&::before {
-				top: -10px;
-      		}
-
-			&::after {
-				top: 10px;
-      		}
-    	}
-  	}
-
-	&.open {
-		transform: rotate(180deg);
-		transition-duration: 1s;
-
-		.icon-menu {
-			transition-duration: .5s;
-			background-color: transparent;
-
-			&::before {
-				top: 0;
-				transform: rotate(45deg);
-				transition-duration: .5s;
-	      	}
-
-			&::after {
-				top: 0;
-				transform: rotate(-45deg);
-				transition-duration: .5s;
-	     	}
-	    }
-  	}
-}
 
 /// Cover
 // -----------------------------------------------------------------------------
@@ -149,6 +155,13 @@ nav {
 	background-image: url('../img/header.jpg');
 	background-position: left center;
 	background-size: cover;
+
+	.description-container {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
 
 	&__title {
 		color: $c-white;
@@ -167,12 +180,6 @@ nav {
 		font-size: .875em;
 		text-align: center;
 	}
-
-	.description-container {
-		position: relative;
-		top: 50%;
-		transform: translateY(-50%);
-	}
 }
 
 /// Features
@@ -181,6 +188,9 @@ nav {
 .features {
 	padding: 5em 0;
 	text-align: center;
+}
+
+.feature {
 
 	.description-container {
 		text-align: center;
@@ -193,24 +203,21 @@ nav {
 		border-radius: 50%;
 		background-color: $c-primary;
 		text-align: center;
-
-		.icon {
-			color: $c-white;
-			font-size: 1.5em;
-			line-height: 65px;
-		}
 	}
-}
-
-.feature {
 
 	&__title {
 		font-size: 1em;
 	}
 
 	&__text {
-		font-weight: $fw-light;
 		font-size: .875em;
+		font-weight: $fw-regular;
+	}
+
+	&__icon {
+		color: $c-white;
+		font-size: 1.5em;
+		line-height: 65px;
 	}
 
 	&__btn {
