--- a/css/style.css
+++ b/css/style.css
@@ -2842,8 +2842,8 @@ textarea {
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 1; }
 
-nav {
-  position: fixed;
+.nav {
+  position: relative;
   width: 100%;
   height: 6.25em;
   transition-duration: .5s;
@@ -2851,70 +2851,69 @@ nav {
   background-color: #fff;
   overflow: hidden;
   z-index: 10; }
-  nav .logo {
+  .nav__logo {
     position: absolute;
     top: 20px;
     left: 20px;
     height: 3.5em; }
-  nav .menu {
+  .nav__list {
     padding: 6.25em 0 0;
     text-align: center; }
-    nav .menu li:hover {
-      background: #f2f2f2; }
-    nav .menu li a {
-      display: inline-block;
-      padding: 1.25em; }
-  nav.open {
-    height: auto; }
-
-.menu-handler {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  width: 60px;
-  height: 60px;
-  transition-duration: .25s; }
-  .menu-handler .icon-menu {
+  .nav__item:hover {
+    background: #f2f2f2; }
+  .nav__link {
+    display: inline-block;
+    padding: 1.25em; }
+  .nav__handler {
     position: absolute;
-    top: 30px;
-    left: 15px;
-    width: 30px;
-    height: 4px;
-    transition-duration: .25s;
-    background-color: #1c1c1b; }
-    .menu-handler .icon-menu::before, .menu-handler .icon-menu::after {
+    top: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    transition-duration: .25s; }
+    .nav__handler .icon-menu {
       position: absolute;
+      top: 30px;
+      left: 15px;
       width: 30px;
       height: 4px;
       transition-duration: .25s;
-      background-color: #1c1c1b;
-      content: ''; }
-    .menu-handler .icon-menu::before {
-      top: -7px;
-      left: 0; }
-    .menu-handler .icon-menu::after {
-      top: 7px;
-      left: 0; }
-  .menu-handler:hover {
-    cursor: pointer; }
-    .menu-handler:hover .icon-menu::before {
-      top: -10px; }
-    .menu-handler:hover .icon-menu::after {
-      top: 10px; }
-  .menu-handler.open {
-    transform: rotate(180deg);
-    transition-duration: 1s; }
-    .menu-handler.open .icon-menu {
-      transition-duration: .5s;
-      background-color: transparent; }
-      .menu-handler.open .icon-menu::before {
-        top: 0;
-        transform: rotate(45deg);
-        transition-duration: .5s; }
-      .menu-handler.open .icon-menu::after {
-        top: 0;
-        transform: rotate(-45deg);
-        transition-duration: .5s; }
+      background-color: #1c1c1b; }
+      .nav__handler .icon-menu::before, .nav__handler .icon-menu::after {
+        position: absolute;
+        width: 30px;
+        height: 4px;
+        transition-duration: .25s;
+        background-color: #1c1c1b;
+        content: ''; }
+      .nav__handler .icon-menu::before {
+        top: -7px;
+        left: 0; }
+      .nav__handler .icon-menu::after {
+        top: 7px;
+        left: 0; }
+    .nav__handler:hover {
+      cursor: pointer; }
+      .nav__handler:hover .icon-menu::before {
+        top: -10px; }
+      .nav__handler:hover .icon-menu::after {
+        top: 10px; }
+    .nav__handler.open {
+      transform: rotate(180deg);
+      transition-duration: 1s; }
+      .nav__handler.open .icon-menu {
+        transition-duration: .5s;
+        background-color: transparent; }
+        .nav__handler.open .icon-menu::before {
+          top: 0;
+          transform: rotate(45deg);
+          transition-duration: .5s; }
+        .nav__handler.open .icon-menu::after {
+          top: 0;
+          transform: rotate(-45deg);
+          transition-duration: .5s; }
+  .nav.open {
+    height: auto; }
 
 .cover {
   position: relative;
@@ -2922,6 +2921,11 @@ nav {
   background-image: url("../img/header.jpg");
   background-position: left center;
   background-size: cover; }
+  .cover .description-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
   .cover__title {
     color: #fff;
     font-weight: 600;
@@ -2934,34 +2938,33 @@ nav {
     color: #fff;
     font-size: .875em;
     text-align: center; }
-  .cover .description-container {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%); }
 
 .features {
   padding: 5em 0;
   text-align: center; }
-  .features .description-container {
-    text-align: center; }
-  .features .icon-container {
-    display: inline-block;
-    width: 65px;
-    height: 65px;
-    border-radius: 50%;
-    background-color: #d35656;
-    text-align: center; }
-    .features .icon-container .icon {
-      color: #fff;
-      font-size: 1.5em;
-      line-height: 65px; }
+
+.feature .description-container {
+  text-align: center; }
+
+.feature .icon-container {
+  display: inline-block;
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  background-color: #d35656;
+  text-align: center; }
 
 .feature__title {
   font-size: 1em; }
 
 .feature__text {
-  font-weight: 200;
-  font-size: .875em; }
+  font-size: .875em;
+  font-weight: 400; }
+
+.feature__icon {
+  color: #fff;
+  font-size: 1.5em;
+  line-height: 65px; }
 
 .feature__btn {
   display: inline-block;
