modified name classes and adedd footer

--- a/scss/utils/_breakpoints.scss
+++ b/scss/utils/_breakpoints.scss
@@ -1,6 +1,6 @@
-/*------------------------------------
-    $BREAKPOINTS
-------------------------------------*/
+//------------------------------------
+//    $BREAKPOINTS
+//------------------------------------
 
 
 @mixin media($bp) {
