--- a/scss/utils/_functions.scss
+++ b/scss/utils/_functions.scss
@@ -1,13 +1,13 @@
-/************ FUNCTIONS **************/
+// ************ FUNCTIONS **************
 
 //PX TO REM
 @function rem($size, $base:16) {
-  $remSize: $size / $base;
-  @return #{$remSize}rem;
+	$remSize: $size / $base;
+	@return #{$remSize}rem;
 }
 
 //PX TO EM
 @function em($size, $base:16) {
-  $emSize: $size / $base;
-  @return #{$emSize}em;
+	$emSize: $size / $base;
+	@return #{$emSize}em;
 }
