--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,6 +1,6 @@
-/*-----------------------------------------------------------------------------
-								$VARIABLES
------------------------------------------------------------------------------*/
+//-----------------------------------------------------------------------------
+//								$VARIABLES
+//-----------------------------------------------------------------------------
 
 
 // Colors
@@ -51,8 +51,10 @@ $fw-header:				$fw-bold;
 // Sizes
 // -----------------------------------------------------------------------------
 
-// Heights
+$h-icon-container:		65px;
 $h-nav:					6.25em;
+
+$w-icon-container:		65px;
 
 
 // Breakpoints
