--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-/*-----------------------------------------------------------------------------
-								$VARIABLES
------------------------------------------------------------------------------*/
-/************** MIXINS **************/
-/************ FUNCTIONS **************/
-/*------------------------------------
-    $BREAKPOINTS
-------------------------------------*/
 /*------------------------------------
     $RESET
  ------------------------------------*/
@@ -399,6 +391,14 @@ body {
   font-family: "Lato", sans-serif;
   font-size: inherit;
   line-height: 1.5; }
+
+.filter {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1; }
 
 h1,
 h2,
@@ -2826,23 +2826,9 @@ textarea {
   clip: auto; }
 
 /*-----------------------------------------------------------------------------
-								$STYLES
+								$LAYOUT
 -----------------------------------------------------------------------------*/
-.description-container {
-  width: 90%;
-  max-width: none;
-  margin-left: auto;
-  margin-right: auto; }
-
-.filter {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  z-index: 1; }
-
-.nav {
+.header {
   position: relative;
   width: 100%;
   height: 6.25em;
@@ -2851,27 +2837,27 @@ textarea {
   background-color: #fff;
   overflow: hidden;
   z-index: 10; }
-  .nav__logo {
+  .header .nav-logo {
     position: absolute;
     top: 20px;
     left: 20px;
     height: 3.5em; }
-  .nav__list {
+  .header ul {
     padding: 6.25em 0 0;
     text-align: center; }
-  .nav__item:hover {
+  .header li:hover {
     background: #f2f2f2; }
-  .nav__link {
+  .header a {
     display: inline-block;
     padding: 1.25em; }
-  .nav__handler {
+  .header .nav-handler {
     position: absolute;
     top: 20px;
     right: 20px;
     width: 60px;
     height: 60px;
     transition-duration: .25s; }
-    .nav__handler .icon-menu {
+    .header .nav-handler .icon-menu {
       position: absolute;
       top: 30px;
       left: 15px;
@@ -2879,40 +2865,40 @@ textarea {
       height: 4px;
       transition-duration: .25s;
       background-color: #1c1c1b; }
-      .nav__handler .icon-menu::before, .nav__handler .icon-menu::after {
+      .header .nav-handler .icon-menu::before, .header .nav-handler .icon-menu::after {
         position: absolute;
         width: 30px;
         height: 4px;
         transition-duration: .25s;
         background-color: #1c1c1b;
         content: ''; }
-      .nav__handler .icon-menu::before {
+      .header .nav-handler .icon-menu::before {
         top: -7px;
         left: 0; }
-      .nav__handler .icon-menu::after {
+      .header .nav-handler .icon-menu::after {
         top: 7px;
         left: 0; }
-    .nav__handler:hover {
+    .header .nav-handler:hover {
       cursor: pointer; }
-      .nav__handler:hover .icon-menu::before {
+      .header .nav-handler:hover .icon-menu::before {
         top: -10px; }
-      .nav__handler:hover .icon-menu::after {
+      .header .nav-handler:hover .icon-menu::after {
         top: 10px; }
-    .nav__handler.open {
+    .header .nav-handler.open {
       transform: rotate(180deg);
       transition-duration: 1s; }
-      .nav__handler.open .icon-menu {
+      .header .nav-handler.open .icon-menu {
         transition-duration: .5s;
         background-color: transparent; }
-        .nav__handler.open .icon-menu::before {
+        .header .nav-handler.open .icon-menu::before {
           top: 0;
           transform: rotate(45deg);
           transition-duration: .5s; }
-        .nav__handler.open .icon-menu::after {
+        .header .nav-handler.open .icon-menu::after {
           top: 0;
           transform: rotate(-45deg);
           transition-duration: .5s; }
-  .nav.open {
+  .header.open {
     height: auto; }
 
 .cover {
@@ -2922,28 +2908,33 @@ textarea {
   background-position: left center;
   background-size: cover; }
   .cover .description-container {
+    width: 90%;
+    max-width: none;
+    margin-left: auto;
+    margin-right: auto;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
-  .cover__title {
+  .cover .title {
     color: #fff;
     font-weight: 600;
     line-height: 1.2;
     text-align: center;
     text-transform: uppercase; }
-    .cover__title--red {
+    .cover .title-red {
       color: #d35656; }
-  .cover__text {
+  .cover p {
     color: #fff;
     font-size: .875em;
     text-align: center; }
 
 .features {
+  width: 90%;
+  max-width: none;
+  margin-left: auto;
+  margin-right: auto;
   padding: 5em 0;
-  text-align: center; }
-
-.feature .description-container {
   text-align: center; }
 
 .feature .icon-container {
@@ -2953,20 +2944,19 @@ textarea {
   border-radius: 50%;
   background-color: #d35656;
   text-align: center; }
+  .feature .icon-container span {
+    color: #fff;
+    font-size: 1.5em;
+    line-height: 65px; }
 
-.feature__title {
+.feature .title {
   font-size: 1em; }
 
-.feature__text {
+.feature .text {
   font-size: .875em;
   font-weight: 400; }
 
-.feature__icon {
-  color: #fff;
-  font-size: 1.5em;
-  line-height: 65px; }
-
-.feature__btn {
+.feature .btn {
   display: inline-block;
   margin: 1em 0 3em;
   padding: .75em 1.5em;
@@ -2975,6 +2965,64 @@ textarea {
   font-size: .75em;
   font-weight: 600;
   text-transform: uppercase; }
-  .feature__btn:hover {
+  .feature .btn:hover {
     background-color: #d35656;
     color: #fff; }
+
+footer {
+  padding: 6em 0 3em;
+  background-color: #d35656;
+  text-align: center; }
+  footer hr {
+    width: 80%;
+    margin: 2.5em auto;
+    border: 0;
+    border-top: 1px solid #fff; }
+  footer .wrapper {
+    width: 80%;
+    max-width: none;
+    margin-left: auto;
+    margin-right: auto; }
+  footer .description-container {
+    text-align: center; }
+    footer .description-container .title {
+      color: #fff;
+      font-size: 1em; }
+    footer .description-container .text {
+      margin-bottom: 0;
+      color: #fff;
+      font-size: .875rem; }
+    footer .description-container ul {
+      margin-bottom: 4em;
+      padding: 0; }
+      footer .description-container ul li {
+        color: #fff;
+        font-size: .875rem; }
+      footer .description-container ul a {
+        color: #fff;
+        text-decoration: underline; }
+        footer .description-container ul a:hover {
+          color: #f2f2f2; }
+
+.social-icons {
+  margin-bottom: 1em;
+  padding: 0; }
+  .social-icons li {
+    display: inline-block;
+    margin-right: .25em; }
+    .social-icons li:last-child {
+      margin-right: 0; }
+    .social-icons li a {
+      display: block;
+      width: 2.375em;
+      height: 2.375em;
+      transition: all .3s ease-in-out;
+      border: 0.75px solid #fff;
+      border-radius: 50%;
+      background-color: #d35656;
+      color: #fff;
+      line-height: 2.375em;
+      text-align: center; }
+      .social-icons li a:hover {
+        background-color: #f2f2f2;
+        color: #d35656; }
