--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,6 +6,7 @@
 // Structure
 // -----------------------------------------------------------------------------
 
+
 *,
 *::before,
 *::after {
@@ -30,6 +31,16 @@ body {
 	font-size: inherit;
 	line-height: 1.5;
 }
+
+.filter {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: $c-shadow;
+	z-index: 1;
+}
+
 
 // Base Elements
 // -----------------------------------------------------------------------------
