--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,232 +8,10 @@
 
 
 /*-----------------------------------------------------------------------------
-								$STYLES
+								$LAYOUT
 -----------------------------------------------------------------------------*/
 
-
-// General
-// -----------------------------------------------------------------------------
-
-.description-container {
-	@include wrapper();
-}
-
-.filter {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background-color: $c-shadow;
-	z-index: 1;
-}
-
-
-// Nav
-// -----------------------------------------------------------------------------
-
-.nav {
-	position: relative;
-	width: 100%;
-	height: $h-nav;
-	transition-duration: .5s;
-	transition-timing-function: ease;
-	background-color: $c-white;
-	overflow: hidden;
-	z-index: 10;
-
-	&__logo {
-		position: absolute;
-		top: 20px;
-		left: 20px;
-		height: 3.5em;
-	}
-
-	&__list {
-		padding: $h-nav 0 0;
-		text-align: center;
-	}
-
-	&__item {
-		&:hover {
-			background: $c-white-darker;
-		}
-	}
-
-	&__link {
-		display: inline-block;
-		padding: 1.25em;
-	}
-
-	&__handler {
-		position: absolute;
-		top: 20px;
-		right: 20px;
-		width: 60px;
-		height: 60px;
-		transition-duration: .25s;
-
-		.icon-menu {
-			position: absolute;
-			top: 30px;
-			left: 15px;
-			width: 30px;
-			height: 4px;
-			transition-duration: .25s;
-			background-color: $c-black;
-
-			&::before,
-			&::after {
-				position: absolute;
-				width: 30px;
-				height: 4px;
-				transition-duration: .25s;
-				background-color: $c-black;
-				content: '';
-	    	}
-
-			&::before {
-				top: -7px;
-				left: 0;
-	    	}
-
-			&::after {
-				top: 7px;
-				left: 0;
-		    }
-		}
-
-		&:hover {
-			cursor: pointer;
-
-			.icon-menu {
-				&::before {
-					top: -10px;
-	      		}
-
-				&::after {
-					top: 10px;
-	      		}
-	    	}
-	  	}
-
-		&.open {
-			transform: rotate(180deg);
-			transition-duration: 1s;
-
-			.icon-menu {
-				transition-duration: .5s;
-				background-color: transparent;
-
-				&::before {
-					top: 0;
-					transform: rotate(45deg);
-					transition-duration: .5s;
-		      	}
-
-				&::after {
-					top: 0;
-					transform: rotate(-45deg);
-					transition-duration: .5s;
-		     	}
-		    }
-	  	}
-	}
-
-	&.open {
-		height: auto;
-	}
-}
-
-
-/// Cover
-// -----------------------------------------------------------------------------
-
-.cover {
-	position: relative;
-	height: 50rem;
-	background-image: url('../img/header.jpg');
-	background-position: left center;
-	background-size: cover;
-
-	.description-container {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-	}
-
-	&__title {
-		color: $c-white;
-		font-weight: $fw-bold;
-		line-height: 1.2;
-		text-align: center;
-		text-transform: uppercase;
-
-		&--red {
-			color: $c-primary;
-		}
-	}
-
-	&__text {
-		color: $c-white;
-		font-size: .875em;
-		text-align: center;
-	}
-}
-
-/// Features
-// -----------------------------------------------------------------------------
-
-.features {
-	padding: 5em 0;
-	text-align: center;
-}
-
-.feature {
-
-	.description-container {
-		text-align: center;
-	}
-
-	.icon-container {
-		display: inline-block;
-		width: 65px;
-		height: 65px;
-		border-radius: 50%;
-		background-color: $c-primary;
-		text-align: center;
-	}
-
-	&__title {
-		font-size: 1em;
-	}
-
-	&__text {
-		font-size: .875em;
-		font-weight: $fw-regular;
-	}
-
-	&__icon {
-		color: $c-white;
-		font-size: 1.5em;
-		line-height: 65px;
-	}
-
-	&__btn {
-		display: inline-block;
-		margin: 1em 0 3em;
-		padding: .75em 1.5em;
-		transition: all .3s ease-in-out;
-		border: 2px solid $c-primary;
-		font-size: .75em;
-		font-weight: $fw-bold;
-		text-transform: uppercase;
-
-
-		&:hover {
-			background-color: $c-primary;
-			color: $c-white;
-		}
-	}
-}
+@import 'layout/nav';
+@import 'layout/cover';
+@import 'layout/features';
+@import 'layout/footer'
