--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -1,4 +1,4 @@
-/************** MIXINS **************/
+// ************** MIXINS **************
 
 @mixin wrapper($width: 90%, $max-width: none) {
 	width: $width;
