--- a/scss/layout/_cover.scss
+++ b/scss/layout/_cover.scss
@@ -5,9 +5,18 @@
 .cover {
 	position: relative;
 	height: 50rem;
-	background-image: url('../img/header.jpg');
-	background-position: left center;
+	background-image: url('../img/cover.jpg');
+	background-position: center center;
 	background-size: cover;
+
+	.filter {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: $c-shadow;
+		z-index: 1;
+	}
 
 	.description-container {
 		@include wrapper();
