--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,9 +1,11 @@
 // Footer
 // -----------------------------------------------------------------------------
 
-footer {
+.main-footer {
 	padding: 6em 0 3em;
-	background-color: $c-primary;
+	background-image: url('../img/parallax.jpeg');
+	background-position: center center;
+	background-size: cover;
 	text-align: center;
 
 	hr {
@@ -53,36 +55,48 @@ footer {
 			}
 		 }
 	}
-}
 
-.social-icons {
-	margin-bottom: 1em;
-	padding: 0;
+	.social-icons {
+		margin-bottom: 1em;
+		padding: 0;
 
-	li {
-		display: inline-block;
-		margin-right: .25em;
+		li {
+			display: inline-block;
+			margin-right: .25em;
 
-		&:last-child {
-			margin-right: 0;
-		}
+			&:last-child {
+				margin-right: 0;
+			}
 
-		a {
-			display: block;
-			width: 2.375em;
-			height: 2.375em;
-			transition: all .3s ease-in-out;
-			border: .75px solid $c-white;
-			border-radius: 50%;
-			background-color: $c-primary;
-			color: $c-white;
-			line-height: 2.375em;
-			text-align: center;
+			a {
+				display: block;
+				width: $w-social-icon;
+				height: $h-social-icon;
+				transition: all .3s ease-in-out;
+				border: .75px solid $c-white;
+				border-radius: 50%;
+				background-color: $c-primary;
+				color: $c-white;
+				line-height: $h-social-icon;
+				text-align: center;
 
-			&:hover {
-				background-color: $c-white-darker;
-				color: $c-primary;
+				&:hover {
+					background-color: $c-white;
+					color: $c-primary;
+				}
 			}
 		}
+	}
+}
+
+.secondary-footer {
+	padding: 2em 0;
+
+
+	p {
+		margin: 0;
+		color: $c-gray;
+		font-size: .875rem;
+		text-align: center;
 	}
 }
