--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -9,25 +9,16 @@
 $c-white:				    #fff;
 $c-white-darker:     		darken($c-white, 5%);
 $c-black:				    #1c1c1b;
-$c-gray:				    lighten($c-black, 45%);
-$c-gray-darker:		   		lighten($c-black, 25%);
-$c-gray-darkest:     		lighten($c-black, 15%);
-$c-shadow:					rgba(0, 0, 0, .4);
+$c-gray:				    #d0d0d0;
+$c-gray-darker:		   		darken($c-gray, 25%);
+$c-gray-darkest:     		darken($c-gray, 50%);
+$c-shadow:					rgba(0, 0, 0, .35);
+$c-shadow-alt:				rgba(0, 0, 0, .75);
 
-$c-primary:					#d35656;
-$c-primary-darken:			darken($c-primary, 10%);
-$c-primary-lighten:			lighten($c-primary, 10%);
-
-
-
-// Brand Colors
-$c-facebook:         		#3b5998;
-$c-twitter:          		#55acee;
-$c-instagram:				#833ab4;
-$c-youtube:          		#cd201f;
-
-
-
+$c-primary-b:				#d35656;
+$c-primary:					#ff5450;
+$c-primary-darker:			darken($c-primary, 15%);
+$c-primary-lightest:		lighten($c-primary, 15%);
 
 
 // Typography
@@ -38,23 +29,27 @@ $fw-light:				200;
 $fw-regular:			400;
 $fw-bold:				600;
 
-// Base Fonts
-$ff-base:         		('Lato', sans-serif);
-$fw-base:				$fw-regular;
-$fz-base:				1rem;
-$lh-base:				1.4;
-
 //Header Fonts
 $ff-header:       		('Montserrat', sans-serif);
 $fw-header:				$fw-bold;
 
+// Base Fonts
+$ff-base:         		('Open Sans', sans-serif);
+$fw-base:				$fw-regular;
+$fz-base:				1rem;
+$lh-base:				1.4;
+
+
 // Sizes
 // -----------------------------------------------------------------------------
 
-$h-icon-container:		65px;
 $h-nav:					6.25em;
 
-$w-icon-container:		65px;
+$h-feature-icon:		3.5rem;
+$w-feature-icon:		3.5rem;
+
+$h-social-icon:			2.5rem;
+$w-social-icon:			2.5rem;
 
 
 // Breakpoints
