--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -32,6 +32,12 @@ body {
 	line-height: 1.5;
 }
 
+.desktop-wrapper {
+	@include media(md) {
+		display: flex;
+	}
+}
+
 
 // Base Elements
 // -----------------------------------------------------------------------------
