--- a/scss/layout/_cover.scss
+++ b/scss/layout/_cover.scss
@@ -14,16 +14,20 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
-		background-color: $c-shadow;
+		background-color: $c-shadow-alt;
 		z-index: 1;
 	}
 
 	.description-container {
-		@include wrapper();
+		@include wrapper(90%);
 		position: absolute;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
+
+		@include media(md) {
+			@include wrapper(60%);
+		}
 	}
 
 	.title {
@@ -38,7 +42,7 @@
 		}
 	}
 
-	p {
+	.text {
 		color: $c-white;
 		font-size: .875em;
 		text-align: center;
