--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
 // -----------------------------------------------------------------------------
 
 .main-footer {
-	padding: 6em 0 3em;
+	padding: 8em 0 3em;
 	background-image: url('../img/parallax.jpeg');
 	background-position: center center;
 	background-size: cover;
@@ -17,13 +17,20 @@
 
 	.wrapper {
 		@include wrapper (80%);
-		// display: flex;
-	}
 
+		@include media(md) {
+			display: flex;
+			justify-content: space-between;
+		}
+	}
 
 	.description-container {
 		text-align: center;
-		// flex: 1 1 0;
+
+		@include media(md) {
+			text-align: left;
+			width: 50%;
+		}
 
 		.title {
 			color: $c-white;
@@ -90,7 +97,6 @@
 
 .secondary-footer {
 	padding: 2em 0;
-
 
 	p {
 		margin: 0;
