--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,8 @@
 
 @import 'layout/nav';
 @import 'layout/cover';
+@import 'layout/main-section';
 @import 'layout/features';
-@import 'layout/trail';
-@import 'layout/footer'
+@import 'layout/partners';
+@import 'layout/trainers';
+@import 'layout/footer';
