--- a/scss/layout/_trainers.scss
+++ b/scss/layout/_trainers.scss
@@ -1,5 +1,4 @@
 .trainers {
-	@include wrapper (90%);
 	padding: 6em 0;
 	text-align: center;
 
@@ -20,9 +19,27 @@
 			content: '';
 		}
 	}
+
+	.flexbox-wrapper {
+		@include wrapper (90%);
+
+		@include media(md) {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+
+			max-width: 64rem;
+			margin-top: 2em;
+		}
+	}
 }
 
 .trainer {
+	@include media(md) {
+		width: 30%;
+		padding: 0 1em;
+	}
+
 	.img-container {
 		margin-top: 4em;
 
